# scnx-openwrt

./: README.Rmd  feeds.conf.default
.github/workflow/: build_ath79.yml  formal.yml
.github/workflows/: build_ath79.yml  build_toolchain_imagebuilder.yml
output/images/: Readme.md
output/logs/: Readme.md
package/kernel/mac80211/: Makefile
package/kernel/mac80211/patches/ath9k/: 601-include-tx-power-in-tx-control-path.patch  602-report-back-tx-power-in-status-path.patch  8900-ath9k_support-setting-adaptive-sensitivity-through-mac80211.patch  9000-ath9k_register-hw-with-tx-power-levels.patch  9001-ath9k_include-tx-power-in-tx-control-path.patch  9002-ath9k_report-back-tx-power-in-status-path.patch  9004-ath9k_export-max-power-per-ratetbl-to-debugfs.patch  9005-ath9k_allow-enabling-disabling-tpc-via-mac80211-feature-interface.patch  9006-ath9k_allow-get-txpower-without-vif.patch  9007-ath9k_add-support-for-control-frame-tpc.patch  9008-ath9k_add-support-for-further-control-knobs-via-feature-ctrl.patch
package/kernel/mac80211/patches/subsys/: 361-mac80211-minstrel_ht-add-debugfs-monitoring-controll.patch  370-mac80211-minstrel_ht-include-all-retry-chains-in-txs.patch  790-mac80211-minstrel_ht-fix-ri-txstat-ofdm-rate-mapping.patch  890-mac80211-add-unified-control-for-adaptive-sensitivity.patch  8900-mac80211-add-unified-control-for-adaptive-sensitivity.patch  900-mac80211-add-ORCA-open-source-resource-control-api.patch  900-mac80211-add-api-for-monitoring-controlling-rate-con.patch  900-mac80211-minstrel_rcd-use_ktime-as-timestamp.patch  9000-mac80211-modify-tx-power-level-annotation.patch  9001-mac80211-add-tx-power-annotation-in-control-path.patch  (+52 more)
package/kernel/mt76/patches/: 100-mt7615-disable-mt7615-hardware-retry-chain-auto-inde.patch  100-mt76_force_manual_mrr_chain_setup_scnx.patch  101-mt7615-fix-txstatus-reporting.patch  102-mt7615-fix-probing-rate-reporting.patch  200-mt7615-add-control-of-adaptive-sensitivity-through-mac80211.patch  201-mt7603-add-control-of-adaptive-sensitivity-through-mac80211.patch  202-mt7615-add-support-for-further-control-knobs-through-feature-ctrl.patch  203-mt76-set-try_count-and-tx-power-in-ieee80211_rate_status.patch  9000-mt7615-add-TPC-control-infrastructure.patch  9005-mt7615-enable-disable-TPC-via-feature-control-interface.patch  9010-mt7615-report-tx-power-in-tx-status.patch
package/utils/minstrel-rcd/: Makefile
package/utils/minstrel-rcd/files/: dictionary.zdict  minstrel-rcd-mqtt-nossl.config  minstrel-rcd-mqtt-ssl.config  minstrel-rcd-mqtt.config  minstrel-rcd.config
package/utils/minstrel-rcd/patches/: 001-add-mqtt-support.patch
package/utils/minstrel-rcd/src/: CMakeLists.txt  client.c  config.c  main.c  mqtt.c  phy.c  rcd.h  server.c  zstd.c
